# todo_apps_assingment

Desktop/to-do_list/: todo_cli.py
Evolution of Todo/: .gitignore  README.md  todo_cli.py
Evolution of Todo/.claude/: settings.local.json
TODO-PHASE1/: pyproject.toml
TODO-PHASE1/src/: task.py  task_manager.py  todo_app.py
TODO-PHASE1/tests/: test_task.py
heackthon-todo/TODO-PHASE01/: README.md  functionality_test.py  pyproject.toml  test_colors.py  validate_updated.py
heackthon-todo/TODO-PHASE01/.specify/memory/: constitution.md
heackthon-todo/TODO-PHASE01/history/prompts/001-phase-i-cli/: 0002-phase-i-implementation-plan.plan.prompt.md
heackthon-todo/TODO-PHASE01/specs/001-phase-i-cli/: research.md
heackthon-todo/TODO-PHASE01/src/: task.py  task_manager.py  todo_app.py
heackthon-todo/TODO-PHASE01/tests/: test_integration.py  test_task_manager.py
heackthon-todo/TODO-PHASE02/: README.md
heackthon-todo/TODO-PHASE02/backend/: .env.example  pyproject.toml  test_response.py
heackthon-todo/TODO-PHASE02/backend/src/: dependencies.py  init_db.py
heackthon-todo/TODO-PHASE02/backend/src/auth/: config.py
heackthon-todo/TODO-PHASE02/backend/src/models/: todo.py  user.py
heackthon-todo/TODO-PHASE02/backend/src/routes/: auth.py
heackthon-todo/TODO-PHASE02/backend/src/schemas/: todo.py
my-textbook/: LICENSE-CONTENT.md
my-textbook/.claude/: settings.local.json
my-textbook/examples-repository/: LICENSE
my-textbook/physical-ai-robotics-book/: docusaurus.config.ts  package-lock.json  package.json
specs/002-physical-ai-robotics-book/: data-model.md  (+3 more)
(+117 files in other folders)
