[project]
name = "todo-cli-phase1"
version = "1.0.0"
description = "Phase I CLI Todo App - In-memory Python console application"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Evolution of Todo Project"}
]
dependencies = [
    "colorama>=0.4.4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
